--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
          </style>
     </head>
-    <body style="background-color:WhiteSmoke;">
+    <body style="background-color:White;">
 
     </body>
 </html>
