--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                 text-align: left;
             }  
         </style>
+        <link rel="icon"
+         href="/birb.ico"type="image/x-icon">
     </head>
     <body style="background-color:White;">
         <!--not imported yet-->
