--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
         <img id = "banner"  src="banner.svg" style="max-width:100%;height:auto;">
         <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
-        <img src="leaflefa test.png" style="max-width:100%;height:auto;">
+        <img src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
     </body>
 </html>
