--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 text-align: left;
             }  
         </style>
-        <link rel="icon" type="image/x-icon" href="birb.ico">
+        <link rel="icon" type="image/x-icon" href="EACLogo.ico">
     </head>
     <body style="background-color:White;">
         <!--not imported yet-->
