--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <title>Saratoga High School Environmental Science Club</title>
         <meta charset="utf-8">
         <style>
+            #temporary{
+                height: 10%;
+                width: 10%;
+            }
             #banner{
                 top: 0%;
                 user-drag: none;
@@ -48,6 +52,6 @@
         <img id = "banner"  src="banner.svg" style="max-width:100%;height:auto;">
         <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
-        <img src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
+        <img id = "temporary" src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
     </body>
 </html>
