--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 text-align: left;
             }  
         </style>
-        <link rel="icon" type="image/x-icon" href="bluebg.png">
+        <link rel="icon" type="image/x-icon" href="roundbg.png">
     </head>
     <body style="background-color:White;">
         <!--not imported yet-->
