--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!--i think we should make sure it works for mobile and computer displays of any size-->
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Saratoga High School Environmental Science Club</title>
+        <title>Environmental Action</title>
         <meta charset="utf-8">
         <style>
             #temporary{
