--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
                 height: 10%;
                 width: 10%;
             }
-            #banner{
-                top: 0%;
+            #bottomBannerOne{
+                top: 200%;
+                overflow-y: auto;
+                overflow-x: auto;
                 user-drag: none;
                 -webkit-user-drag: none;
                 user-select: none;
@@ -49,7 +51,7 @@
     </head>
     <body style="background-color:White;">
         <!--not imported yet-->
-        <img id = "banner"  src="banner.svg" style="max-width:100%;height:auto;">
+        <img id = "bottomBannerOne"  src="bottombanner1.png" style="max-width:100%;height:auto;">
         <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
         <img id = "temporary" src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
