--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </head>
     <body style="background-color:White;">
         <!--not imported yet-->
-        <img id = "bottomBannerOne"  src="bottombanner1.png" style="max-width:100%;height:auto;">
+        <img id = "bottomBannerOne"  src="images/bottombanner1.png" style="max-width:100%;height:auto;">
         <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
         <img id = "temporary" src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
