--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
                 width: 10%;
             }
             #bottomBannerOne{
-                top: 200%;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                top: 120vh;
                 overflow-y: auto;
                 overflow-x: auto;
-                user-drag: none;
-                -webkit-user-drag: none;
-                user-select: none;
-                -moz-user-select: none;
-                -webkit-user-select: none;
-                -ms-user-select: none;
             }    
             #brandLogo{
             	position: fixed;
@@ -51,7 +48,7 @@
     </head>
     <body style="background-color:White;">
         <!--not imported yet-->
-        <img id = "bottomBannerOne"  src="images/bottombanner1.png" style="max-width:100%;height:auto;">
+        <center><img id = "bottomBannerOne"  src="images/bottombanner1.png" style="max-width:100%;height:auto;"></center>
         <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
         <img id = "temporary" src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
