--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 width: 10%;
             }
             #bottomBannerOne{
+                position: relative;
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
