--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
                 height: 10%;
                 width: 10%;
             }
-            #bottomBannerOne{
-                position: relative;
+            p {
+                background-image: url('images/bottombanner1.png');
+                background-size: cover;
+                background-attachment: fixed;
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
+                height: auto;
+                width: 100vh;
                 top: 120vh;
                 overflow-y: auto;
-                overflow-x: auto;
+                overflow-x: hidden;
             }    
             #brandLogo{
             	position: fixed;
@@ -49,7 +53,6 @@
     </head>
     <body style="background-color:White;">
         <!--not imported yet-->
-        <center><img id = "bottomBannerOne"  src="images/bottombanner1.png" style="max-width:100%;height:auto;"></center>
         <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
         <img id = "temporary" src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
