--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
                 background-image: url('images/bottombanner1.png');
                 background-size: cover;
                 background-attachment: fixed;
-                display: block;
                 margin-left: auto;
                 margin-right: auto;
                 height: auto;
-                width: 100vh;
                 top: 120vh;
                 overflow-y: auto;
                 overflow-x: hidden;
@@ -56,5 +54,6 @@
         <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
         <img id = "temporary" src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
+        <p>Currnet Initiatives</p>
     </body>
 </html>
