--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
                 height: 10%;
                 width: 10%;
             }
-            p {
+            Body {
                 background-image: url('images/bottombanner1.png');
                 background-size: cover;
                 background-attachment: fixed;
-                margin-left: auto;
-                margin-right: auto;
-                height: auto;
-                top: 120vh;
+                background-position: 50% 120%;
                 overflow-y: auto;
                 overflow-x: hidden;
             }    
@@ -54,6 +51,7 @@
         <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
         <img id = "temporary" src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
-        <p>Currnet Initiatives</p>
+
+        
     </body>
 </html>
