--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             Body {
                 background-image: url('images/bottombanner1.png');
                 background-size: cover;
-                background-attachment: fixed;
                 background-position: 50% 120%;
+                background-repeat: no-repeat;
                 overflow-y: auto;
                 overflow-x: hidden;
             }    
