--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             }
             Body {
                 background-image: url('images/bottombanner1.png');
-                background-size: cover;
-                background-position: 50% 120%;
+                background-size: 100%;
+                background-position-y: 120%;
                 background-repeat: no-repeat;
                 overflow-y: auto;
                 overflow-x: hidden;
