--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 width: 10%;
             }
             Body {
-                background-image: url('images/bottombanner1.png');
+                background-image: url('images/wiped.svg');
                 background-size: 100%;
                 background-repeat: no-repeat;
                 overflow-y: auto;
