--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             Body {
                 background-image: url('images/wiped.svg');
                 background-size: 100%;
+                background-attachment: fixed;
                 background-repeat: no-repeat;
                 overflow-y: auto;
                 overflow-x: hidden;
