--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 background-size: 100%;
                 background-attachment: fixed;
                 background-repeat: no-repeat;
-                overflow-y: auto;
+                background-position: center;
+                overflow-y: scroll;
                 overflow-x: hidden;
             }    
             #brandLogo{
