--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
             }
             Body {
                 background-image: url('images/wiped.svg');
-                background-size: 100%;
-                background-attachment: fixed;
+                background-position: center top;
+                background-size: cover;
+                min-height: 222.280334728vw
+                background-attachment: scroll;
                 background-repeat: no-repeat;
-                background-position: center;
                 overflow-y: scroll;
                 overflow-x: hidden;
             }    
