--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 background-image: url('images/wiped.svg');
                 background-position: center top;
                 background-size: cover;
-                min-height: 222.280334728vw
+                min-height: 222.280334728vw;
                 background-attachment: scroll;
                 background-repeat: no-repeat;
                 overflow-y: scroll;
