--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <!--would contain About Us, Petitions, etc.-->
             .topBanner{
                 width: 100%;
+                height: auto;
                 position: fixed;
                 z-index: 1;
                 top: 0;
@@ -56,7 +57,7 @@
     </head>
     <body style="background-color:White;">
         <!--not imported yet-->
-        <img class = "TopBanner" src="images/TopBanner.png" style="max-width:100%;height:auto;">
+        <img class = "TopBanner" src="images/TopBanner.png;">
         <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
         <img id = "temporary" src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
