--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </head>
     <body style="background-color:White;">
         <!--not imported yet-->
-        <img class = "TopBanner" src="images/TopBanner.png;">
+        <img class = "TopBanner" src="images/TopBanner.png">
         <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
         <img id = "temporary" src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
