--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 overflow-x: hidden;
             }    
             <!--would contain About Us, Petitions, etc.-->
-            .topBanner{
+            .TopBanner{
                 width: 100%;
                 height: auto;
                 position: fixed;
