--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
         <meta charset="utf-8">
         <style>
             Body {
+                --scaler: 1vw;
                 background-image: url('images/wiped.svg');
                 background-position: center top;
-                background-size: cover;
-                height: 222.280334728vw;
+                height: 222.280334728vw
+                background-size: 100*var(--scaler) auto;
                 background-attachment: scroll;
                 background-repeat: no-repeat;
                 overflow-y: scroll;
