--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
         <meta charset="utf-8">
         <style>
             Body {
-                --scaler: 100vw;
                 background-image: url('images/wiped.svg');
                 background-position: center top;
-                height: 222.280334728vw;
-                background-size: var(--scaler, 100vw) auto;
+                background-size: auto 222.280334728vw;
                 background-attachment: scroll;
                 background-repeat: no-repeat;
                 overflow-y: scroll;
