--- a/index.html
+++ b/index.html
@@ -56,22 +56,13 @@
         <link rel="icon" type="image/x-icon" href="roundbg.png">
     </head>
     <body style="background-color:White;">
-        <!--not imported yet-->
         <img class = "TopBanner" src="images/TopBanner.png">
         <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
         <img id = "temporary" src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
 
         <script>
-            $(document).ready(function() {
-            const initialHeight = window.innerHeight * 2.22; // Set the initial height as 222vh
-
-            $(window).resize(function() {
-                const currentHeight = window.innerHeight;
-                const scaleFactor = currentHeight / initialHeight;
-                $('body').css('background-size', `auto ${initialHeight * scaleFactor}px`);
-            });
-        });
+            <!--JQuery imported to your convenience-->
         </script>
         
     </body>
