--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             Body {
                 background-image: url('images/wiped.svg');
                 background-position: center top;
-                background-size: 100vw 222.280334728vw;
+                height: 222.280334728vw;
+                background-size: 100vw auto;
                 background-attachment: scroll;
                 background-repeat: no-repeat;
                 overflow-y: scroll;
