--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
 
         <script>
-            <!--JQuery imported to your convenience-->
+            <!--JQuery imported because convenient-->
+            const initialHeight = 222.280334728 * $(window).width();
+            $('body').css('height', initialHeight + 'px');
         </script>
         
     </body>
