--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <script>
             <!--JQuery imported because convenient-->
-            const initialHeight = 222.280334728 * $(window).width();
+            const initialHeight = 222.280334728 * $(window).width()/100;
             $('body').css('height', initialHeight + 'px');
         </script>
         
