--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 background-image: url('images/wiped.svg');
                 background-position: center top;
                 height: 222.280334728vw;
-                background-size: 100vw auto;
+                background-size: cover;
                 background-attachment: scroll;
                 background-repeat: no-repeat;
                 overflow-y: scroll;
