--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             }    
             <!--would contain About Us, Petitions, etc.-->
             .TopBanner{
-                width: 100%;
+                width: 100vh;
                 height: auto;
                 position: fixed;
                 z-index: 1;
