--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 }
             }
             @media only screen and (max-width: 769px) {
-                .topBanner {
+                #TopBanner {
                     display: none;
                 }
             }
