--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
                 overflow-y: scroll;
                 overflow-x: hidden;
             }    
-            <!--would contain About Us, Petitions, etc.-->
             #TopBanner{
+                position: fixed;
                 width: 100vw;
                 height: auto;
                 position: fixed;
                 z-index: 1;
-                top: 0;
-                left: 0;
+                top: 0px;
+                left: 0px;
                 overflow-x: hidden;
             }    
             #temporary{
