--- a/index.html
+++ b/index.html
@@ -64,7 +64,24 @@
 
         <script>
             <!--JQuery imported because convenient-->
-            
+            var image = $("#TopBanner")[0];
+            var canvas = document.createElement("canvas");
+            canvas.width = image.width;
+            canvas.height = image.height;
+            var ctx = canvas.getContext("2d");
+            ctx.drawImage(image, 0, 0);
+            var imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+            var data = imageData.data;
+            for (var i = 0; i < data.length; i += 4) {
+                var r = data[i];
+                var g = data[i + 1];
+                var b = data[i + 2];
+                if (r <= 10 && g <= 10 && b <= 10) {
+                    data[i + 3] = 0;
+                }
+            }
+            ctx.putImageData(imageData, 0, 0);
+            $(image).replaceWith(canvas);
         </script>
         
     </body>
