--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <link rel="icon" type="image/x-icon" href="roundbg.png">
     </head>
     <body style="background-color:White;">
-        <img id = "TopBanner" src="images/TopBanner.png">
+        <img id = "TopBanner" src="images/blackbg.png">
         <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
         <img id = "temporary" src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
