--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 overflow-x: hidden;
             }    
             #TopBanner{
-                position: fixed;
+                position: absolute;
                 width: 100vw;
                 height: auto;
                 position: fixed;
@@ -57,31 +57,14 @@
         <link rel="icon" type="image/x-icon" href="roundbg.png">
     </head>
     <body style="background-color:White;">
-        <img id = "TopBanner" src="images/blackbg.png">
+        <img id = "TopBanner" src="images/TopBanner.png">
         <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
         <img id = "temporary" src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
         <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
 
         <script>
             <!--JQuery imported because convenient-->
-            var image = $("#TopBanner")[0];
-            var canvas = document.createElement("canvas");
-            canvas.width = image.width;
-            canvas.height = image.height;
-            var ctx = canvas.getContext("2d");
-            ctx.drawImage(image, 0, 0);
-            var imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-            var data = imageData.data;
-            for (var i = 0; i < data.length; i += 4) {
-                var r = data[i];
-                var g = data[i + 1];
-                var b = data[i + 2];
-                if (r <= 10 && g <= 10 && b <= 10) {
-                    data[i + 3] = 0;
-                }
-            }
-            ctx.putImageData(imageData, 0, 0);
-            $(image).replaceWith(canvas);
+            
         </script>
         
     </body>
