--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
                 left: 0px;
                 overflow-x: hidden;
             }    
+            #brandLogo{
+                width: 5vw;
+                height: auto;
+                position:absolute;
+                z-index: 2;
+                top: 1vw;
+                left: 2vw;
+            }
             #temporary{
                 height: 10%;
                 width: 10%;
@@ -57,9 +65,9 @@
     </head>
     <body style="background-color:White;">
         <img id = "TopBanner" src="images/TopBanner.png">
-        <img id = "brandLogo" src="branddisplay.svg" style="max-width:100%;height:auto;">
-        <img id = "temporary" src="images/LiRichardLeaf.png" style="max-width:100%;height:auto;">
-        <img id = "dropdown" src="dropdown.svg" style="max-width:100%;height:auto;">
+        <img id = "brandLogo" src="images/birdgreen.svg">
+        <img id = "temporary" src="images/LiRichardLeaf.png">
+        <img id = "dropdown" src="dropdown.svg">
 
         <script>
             <!--JQuery imported because convenient-->
