--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
     </head>
     <body style="background-color:White;">
         <img id = "TopBanner" src="images/TopBanner.png">
-        <img id = "brandLogo" src="images/birdgreen.svg">
         <img id = "temporary" src="images/LiRichardLeaf.png">
         <img id = "dropdown" src="dropdown.svg">
-
+        <div class="logoBox">
+            <img class="brandLogo" src="images/birdgreen.svg" alt="Environmental Action Club Logo">
+        </div>
         <script>
             <!--JQuery imported because convenient-->
             
