--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <img id = "temporary" src="images/LiRichardLeaf.png">
         <img id = "dropdown" src="dropdown.svg">
         <div class="logoBox">
-            <img class="brandLogo" src="images/birdgreen.svg" alt="Environmental Action Club Logo">
+            <img id="brandLogo" src="images/birdgreen.svg" alt="Environmental Action Club Logo">
         </div>
         <script>
             <!--JQuery imported because convenient-->
