--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 left: 0px;
                 overflow-x: hidden;
             }    
-            #brandLogo{
+            .logoBox{
                 width: 11vw;
                 height: auto;
                 position:absolute;
@@ -37,10 +37,6 @@
                 height: 10%;
                 width: 10%;
                 z-index: 2;
-            }
-            #brandLogo{
-            	position: fixed;
-                text-align: left;
             }
             <!--Expandable Menu for mobile-->
             #dropdown{
@@ -68,7 +64,7 @@
         <img id = "temporary" src="images/LiRichardLeaf.png">
         <img id = "dropdown" src="dropdown.svg">
         <div class="logoBox">
-            <img id="brandLogo" src="images/birdgreen.svg" alt="Environmental Action Club Logo">
+            <img src="images/birdgreen.svg" alt="Environmental Action Club Logo">
         </div>
         <script>
             <!--JQuery imported because convenient-->
