--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                 top: 3vw;
                 left: 4vw;
             }
+            .logoBox img{
+                display:block;
+                margin 0 auto;
+                max-width: 100%;
+                max-height: 100%;
+            }
             #temporary{
                 height: 10%;
                 width: 10%;
