--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 overflow-x: hidden;
             }    
             .logoBox{
-                width: 8vw;
+                width: 7.6w;
                 height: auto;
                 position:absolute;
                 z-index: 2;
                 top: 2vw;
-                left: 3.5vw;
+                left: 3.35vw;
             }
             .logoBox img{
                 display:block;
@@ -69,9 +69,12 @@
         <img id = "TopBanner" src="images/TopBanner.png">
         <img id = "temporary" src="images/LiRichardLeaf.png">
         <img id = "dropdown" src="dropdown.svg">
-        <div class="logoBox">
-            <img src="images/birdgreen.svg" alt="Environmental Action Club Logo">
-        </div>
+        <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
+            <div class="logoBox">
+                <img src="images/birdgreen.svg" alt="Environmental Action Club Logo">
+                Home Page
+            </div>
+        </a>
         <script>
             <!--JQuery imported because convenient-->
             
