--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 overflow-x: hidden;
             }    
             .logoBox{
-                width: 7.6w;
+                width: 7.6vw;
                 height: auto;
                 position:absolute;
                 z-index: 2;
@@ -72,7 +72,6 @@
         <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
             <div class="logoBox">
                 <img src="images/birdgreen.svg" alt="Environmental Action Club Logo">
-                Home Page
             </div>
         </a>
         <script>
