--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
                 max-width: 100%;
                 max-height: 100%;
             }
+            .logoTextBox{
+                width: 18vw;
+                height: auto;
+                position:absolute;
+                z-index: 2;
+                top: 2.5vw;
+                left: 11.2vw;
+            }
+            .logoTextBox img{
+                display:block;
+                margin 0 auto;
+                max-width: 100%;
+                max-height: 100%;
+            }
             #temporary{
                 height: 10%;
                 width: 10%;
@@ -72,6 +86,9 @@
         <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
             <div class="logoBox">
                 <img src="images/birdgreen.svg" alt="Environmental Action Club Logo">
+            </div>
+            <div class="logoTextBox">
+                <img src="images/BrandText.svg" alt="Environmental Action Club Logo">
             </div>
         </a>
         <script>
