--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 height: auto;
                 position:absolute;
                 z-index: 2;
-                top: 2vw;
-                left: 2vw;
+                top: 1.9w;
+                left: 1.9vw;
             }
             .logoBox img{
                 display:block;
@@ -40,11 +40,11 @@
                 max-height: 100%;
             }
             .logoTextBox{
-                width: 19vw;
+                width: 16vw;
                 height: auto;
                 position:absolute;
                 z-index: 2;
-                top: 2.5vw;
+                top: 2.85vw;
                 left: 10.4vw;
             }
             .logoTextBox img{
