--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 height: auto;
                 position:absolute;
                 z-index: 2;
-                top: 1.9w;
+                top: 1.9vw;
                 left: 1.9vw;
             }
             .logoBox img{
