--- a/index.html
+++ b/index.html
@@ -58,17 +58,20 @@
                 width: 10%;
                 z-index: 2;
             }
-            <!--Expandable Menu for mobile-->
-            #dropdown{
+            <!--Expandable Menu for mobile vs PC Buttons-->
+            .dropdown{
+
+            }
+            .BannerItems{
 
             }
             @media only screen and (min-width: 770px) {
-                #dropdown {
+                .dropdown {
                    display: none;
                 }
             }
             @media only screen and (max-width: 769px) {
-                #TopBanner {
+                .BannerItems {
                     display: none;
                 }
             }
@@ -82,7 +85,7 @@
     <body style="background-color:White;">
         <img id = "TopBanner" src="images/TopBanner.png">
         <img id = "temporary" src="images/LiRichardLeaf.png">
-        <img id = "dropdown" src="dropdown.svg">
+        <img class = "dropdown" src="dropdown.svg">
         <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
             <div class="logoBox">
                 <img src="images/birdgreen.svg" alt="Environmental Action Club Logo">
