--- a/index.html
+++ b/index.html
@@ -63,7 +63,17 @@
 
             }
             .BannerItems{
-
+                border-radius: 10%;
+                background-color:transparent;
+                .ArticlesButton{
+                }
+                .CampaignsButton{
+                }
+                .AboutUsButton{
+                    background-color: #37512cff;
+                    color: #b4f796;
+                    
+                }
             }
             @media only screen and (min-width: 770px) {
                 .dropdown {
