--- a/index.html
+++ b/index.html
@@ -71,17 +71,19 @@
                 width: 10vw;
                 font-family: 'Roboto';
                 font-size: 1.3rem;
-                .ArticlesButton{
-                    left: 73vw;
-                }
-                .CampaignsButton{
-                    left: 85vw;
-                }
-                .AboutUsButton{
-                    left: 97vw;
-                    background-color: #37512cff;
-                    color: #b4f796;
-                }
+                text-align: center;
+                display: inline-block;
+            }
+            .ArticlesButton{
+                left: 73vw;
+            }
+            .CampaignsButton{
+                left: 85vw;
+            }
+            .AboutUsButton{
+                left: 97vw;
+                background-color: #37512cff;
+                color: #b4f796;
             }
             @media only screen and (min-width: 770px) {
                 .dropdown {
