--- a/index.html
+++ b/index.html
@@ -64,42 +64,25 @@
 
             }
             .BannerButtons{
-                border-radius: 10%;
+                border-radius: 5%;
                 border: 3px solid #37512cff;
                 background-color:transparent;
                 color: #37512cff;
                 top:4.2vw;
-                width: 10vw;
+                width: 11vw;
+                height: 120h;
                 font-family: 'Roboto';
-                font-size: 1.3rem;
+                font-size: 1.5rem;
                 text-align: center;
                 display: inline-block
                 -webkit-transition-duration: 0.4s;
                 transition-duration: 0.4s;
                 text-decoration: none;
                 cursor: pointer;
-            }
-            <!--Mini animation borrowed from w3 schools-->
-            .BannerButtons:after {
-                  content: "";
-                  background: #f1f1f1;
-                  display: block;
-                  position: absolute;
-                  padding-top: 300%;
-                  padding-left: 350%;
-                  margin-left: -20px !important;
-                  margin-top: -120%;
-                  opacity: 0;
-                  transition: all 0.8s
-            }
-            .BannerButtons:active:after {
-              padding: 0;
-              margin: 0;
-              opacity: 1;
-              transition: 0s
+                font-weight: bold;
             }
             .BannerButtons:hover {
-                box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+                box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
             }
             .ArticlesButton{
                 left: 70vw;
