--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
             }
             .BannerButtons{
+                position: absolute;
                 border-radius: 5%;
                 border: 3px solid #37512cff;
                 background-color:transparent;
