--- a/index.html
+++ b/index.html
@@ -81,18 +81,19 @@
                 text-decoration: none;
                 cursor: pointer;
                 font-weight: bold;
+                z-index: 2;
             }
             .BannerButtons:hover {
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
             }
             .ArticlesButton{
-                left: 70vw;
+                left: 66vw;
             }
             .CampaignsButton{
-                left: 83vw;
+                left: 79vw;
             }
             .AboutUsButton{
-                left: 96vw;
+                left: 92vw;
                 background-color: #37512cff;
                 color: #b4f796;
             }
