--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
             }
             .BannerButtons{
                 position: absolute;
-                border-radius: 5%;
-                border: 3px solid #37512cff;
+                border-radius: 9%;
+                border: 4px solid #37512cff;
                 background-color:transparent;
                 color: #37512cff;
                 top:4.2vw;
-                width: 11.08vw;
-                height: 125h;
+                font-size: 1.35rem;
+                width: 11.04vw;
+                height: 120h;
                 font-family: 'Roboto';
-                font-size: 1.4rem;
                 text-align: center;
-                display: inline-block
+                display: inline-block;
                 -webkit-transition-duration: 0.4s;
                 transition-duration: 0.4s;
                 text-decoration: none;
@@ -87,13 +87,13 @@
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
             }
             .ArticlesButton{
-                left: 66vw;
+                left: 55vw;
             }
             .CampaignsButton{
-                left: 79vw;
+                left: 67vw;
             }
             .AboutUsButton{
-                left: 92vw;
+                left: 79vw;
                 background-color: #37512cff;
                 color: #b4f796;
             }
