--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             }
             .BannerButtons{
                 position: absolute;
-                border-radius: 9%;
+                border-radius: 10px;
                 border: 4px solid #37512cff;
                 background-color:transparent;
                 color: #37512cff;
@@ -87,13 +87,13 @@
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
             }
             .ArticlesButton{
-                left: 55vw;
+                left: 58vw;
             }
             .CampaignsButton{
-                left: 67vw;
+                left: 71vw;
             }
             .AboutUsButton{
-                left: 79vw;
+                left: 84vw;
                 background-color: #37512cff;
                 color: #b4f796;
             }
