--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 background-color:transparent;
                 color: #37512cff;
                 top:4.2vw;
-                font-size: 1.35rem;
+                font-size: 2rem;
                 width: 11.04vw;
                 height: 120h;
                 font-family: 'Roboto';
@@ -87,13 +87,13 @@
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
             }
             .ArticlesButton{
-                left: 59vw;
+                right: 41vw;
             }
             .CampaignsButton{
-                left: 71.5vw;
+                right: 28.5vw;
             }
             .AboutUsButton{
-                left: 84vw;
+                right: 16vw;
                 background-color: #37512cff;
                 color: #b4f796;
             }
