--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 color: #37512cff;
                 top:4.2vw;
                 font-size: 2rem;
-                width: 11.04vw;
+                <!--width: 11.04vw;-->
                 height: 120h;
                 font-family: 'Roboto';
                 text-align: center;
@@ -87,13 +87,13 @@
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
             }
             .ArticlesButton{
-                right: 41vw;
+                right: 30vw;
             }
             .CampaignsButton{
-                right: 28.5vw;
+                right: 17.5vw;
             }
             .AboutUsButton{
-                right: 16vw;
+                right: 5vw;
                 background-color: #37512cff;
                 color: #b4f796;
             }
