--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
                 color: #37512cff;
                 top:4.2vw;
                 font-size: 2rem;
-                <!--width: 11.04vw;-->
                 height: 120h;
                 font-family: 'Roboto';
                 text-align: center;
@@ -82,6 +81,8 @@
                 cursor: pointer;
                 font-weight: bold;
                 z-index: 2;
+                word-wrap: break-word;
+                
             }
             .BannerButtons:hover {
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
@@ -128,7 +129,11 @@
         </a>
         <script>
             <!--JQuery imported because convenient-->
-            
+            $(document).ready(function() {
+                var element = $(".BannerButtons");
+                var curWidth = element.width();
+                element.width(curWidth * 1.4);
+            });
         </script>
         <button class="BannerButtons ArticlesButton">Articles</button>
         <button class="BannerButtons CampaignsButton">Campaigns</button>
