--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
             }
             .ArticlesButton{
-                right: 30vw;
+                <!--right: 30vw;-->
             }
             .CampaignsButton{
-                right: 17.5vw;
+                <!--right: 17.5vw;-->
             }
             .AboutUsButton{
-                right: 5vw;
+                <!--right: 5vw;-->
                 background-color: #37512cff;
                 color: #b4f796;
             }
