--- a/index.html
+++ b/index.html
@@ -83,21 +83,22 @@
                 z-index: 2;
                 word-wrap: break-word;
                 margin-right: 1.5vw;
+                clear: both;
             }
             .BannerButtons:hover {
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
             }
             .ArticlesButton{
-                <!--right: 30vw;-->
-                float:right;
+                right: 30vw;
+                <!--float:right;-->
             }
             .CampaignsButton{
-                <!--right: 17.5vw;-->
-                float:right;
+                right: 17.5vw;
+                <!--float:right;-->
             }
             .AboutUsButton{
-                <!--right: 5vw;-->
-                float:right;
+                right: 5vw;-->
+                <!--float:right;-->
                 background-color: #37512cff;
                 color: #b4f796;
             }
