--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 z-index: 2;
                 word-wrap: break-word;
                 margin-right: 1.5vw;
-                clear: both;
+                <!--clear: both;-->
             }
             .BannerButtons:hover {
                 box-shadow: 0 7px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
