--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                 <!--float:right;-->
             }
             .AboutUsButton{
-                right: 5vw;-->
-                <!--float:right;-->
                 background-color: #37512cff;
                 color: #b4f796;
+                right: 5vw;
+                <!--float:right;-->
             }
             @media only screen and (min-width: 770px) {
                 .dropdown {
