--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
             .para1{
                 text-align: left;
             }  
+            .halftone{
+                top:24vh;
+                left:2vw;
+                width:22vw;
+            }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <link rel="icon" type="image/x-icon" href="roundbg.png">
@@ -122,6 +127,7 @@
     <body style="background-color:White;">
         <img id = "TopBanner" src="images/TopBanner.png">
         <img id = "temporary" src="images/LiRichardLeaf.png">
+        <img id = "halftone" src="images/halftone.svg">
         <img class = "dropdown" src="dropdown.svg">
         <a href="https://li21rich.github.io/SHSEnvironmentalAction/">
             <div class="logoBox">
