--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 max-height: 100%;
             }
             #temporary{
-                height: 10%;
-                width: 10%;
+                height: 5%;
+                right: 8vw;   
                 z-index: 2;
             }
             <!--Expandable Menu for mobile vs PC Buttons-->
@@ -116,9 +116,9 @@
                 text-align: left;
             }  
             .halftone{
-                top:24vh;
+                top:48vh;
                 left:2vw;
-                width:22vw;
+                width:8vw;
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
