--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
             .para1{
                 text-align: left;
             }  
-            .halftone{
-                top:48vh;
+            #halftone{
+                top:24vh;
                 left:2vw;
-                width:8vw;
+                width:19vw;
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
