--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             }
             #temporary{
                 height: 5%;
-                right: 8vw;   
+                left: 92vw;   
                 z-index: 2;
             }
             <!--Expandable Menu for mobile vs PC Buttons-->
