--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                 text-align: left;
             }  
             #halftone{
+                position: absolute;
                 top:24vh;
                 left:2vw;
                 width:19vw;
