--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 max-height: 100%;
             }
             #temporary{
+                position: absolute;
                 height: 5%;
                 left: 92vw;   
                 z-index: 2;
