--- a/index.html
+++ b/index.html
@@ -117,10 +117,9 @@
                 text-align: left;
             }  
             #halftone{
-                position: absolute;
-                top:24vh;
-                left:2vw;
-                width:17vw;
+                float: left;
+                left:20px;
+                width:17%;
             }
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
