--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 overflow-x: hidden;
             }    
             #TopBanner{
-                width: 100vw;
+                width: 100%;
                 height: auto;
                 position: absolute;
                 z-index: 1;
-                top: 0px;
-                left: 0px;
+                top: 0%;
+                left: 0%;
                 overflow-x: hidden;
             }    
             .logoBox{
